src/snapshots/ub__parser__tests__addition.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "ub__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "main",
                        params: [],
                        ret_ty: None,
                        id: NodeId(
                            6,
                        ),
                        span: 0..20,
                        body: [
                            Expr(
                                Expr {
                                    kind: BinOp(
                                        BinOp {
                                            kind: Add,
                                            lhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        1,
                                                        12..13,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    3,
                                                ),
                                                span: 12..13,
                                            },
                                            rhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        4,
                                                        16..17,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    4,
                                                ),
                                                span: 16..17,
                                            },
                                            span: 12..17,
                                        },
                                    ),
                                    id: NodeId(
                                        5,
                                    ),
                                    span: 12..17,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
