src/snapshots/ub__parser__tests__function.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "uwu.ub",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: Name(
                                    "u64",
                                ),
                            },
                        ),
                        id: NodeId(
                            6,
                        ),
                        span: 0..26,
                        body: [
                            Expr(
                                Expr {
                                    kind: BinOp(
                                        BinOp {
                                            kind: Add,
                                            lhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        1,
                                                        18..19,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    3,
                                                ),
                                                span: 18..19,
                                            },
                                            rhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        5,
                                                        22..23,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    4,
                                                ),
                                                span: 22..23,
                                            },
                                            span: 18..23,
                                        },
                                    ),
                                    id: NodeId(
                                        5,
                                    ),
                                    span: 18..23,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
