src/snapshots/ub__parser__tests__if_else.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "ub__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: U64,
                            },
                        ),
                        id: NodeId(
                            1,
                        ),
                        span: 0..39,
                        body: [
                            IfStmt(
                                IfStmt {
                                    cond: Expr {
                                        kind: Name(
                                            "false",
                                        ),
                                        id: NodeId(
                                            0,
                                        ),
                                        span: 21..26,
                                    },
                                    body: [],
                                    else_part: Some(
                                        Else(
                                            [],
                                            35..37,
                                        ),
                                    ),
                                    span: 18..37,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
