src/snapshots/ub__parser__tests__struct_.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "uwu.ub",
            items: [
                StructDecl(
                    StructDecl {
                        name: "X",
                        fields: [
                            NameTyPair {
                                name: "y",
                                ty: Ty {
                                    span: 14..17,
                                    kind: Name(
                                        "u64",
                                    ),
                                },
                                id: NodeId(
                                    0,
                                ),
                                span: 11..17,
                            },
                            NameTyPair {
                                name: "x",
                                ty: Ty {
                                    span: 22..25,
                                    kind: Name(
                                        "u64",
                                    ),
                                },
                                id: NodeId(
                                    1,
                                ),
                                span: 19..25,
                            },
                        ],
                        id: NodeId(
                            2,
                        ),
                        span: 0..0,
                    },
                ),
            ],
        },
    ),
    [],
)
