src/snapshots/ub__parser__tests__types.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "uwu.ub",
            items: [
                FnDecl(
                    FnDecl {
                        name: "types",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 14..21,
                                kind: Ptr(
                                    Ty {
                                        span: 18..21,
                                        kind: Name(
                                            "u64",
                                        ),
                                    },
                                ),
                            },
                        ),
                        id: NodeId(
                            2,
                        ),
                        span: 0..68,
                        body: [
                            VarDecl(
                                VarDecl {
                                    name: "test",
                                    ty: Some(
                                        Ty {
                                            span: 34..38,
                                            kind: Name(
                                                "Test",
                                            ),
                                        },
                                    ),
                                    rhs: Some(
                                        Expr {
                                            kind: Literal(
                                                Integer(
                                                    2,
                                                    41..42,
                                                ),
                                            ),
                                            id: NodeId(
                                                0,
                                            ),
                                            span: 41..42,
                                        },
                                    ),
                                    span: 0..0,
                                },
                            ),
                            VarDecl(
                                VarDecl {
                                    name: "int",
                                    ty: Some(
                                        Ty {
                                            span: 53..60,
                                            kind: Ptr(
                                                Ty {
                                                    span: 57..60,
                                                    kind: Name(
                                                        "u64",
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    rhs: Some(
                                        Expr {
                                            kind: Literal(
                                                Integer(
                                                    25,
                                                    63..65,
                                                ),
                                            ),
                                            id: NodeId(
                                                1,
                                            ),
                                            span: 63..65,
                                        },
                                    ),
                                    span: 0..0,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
