src/snapshots/ub__parser__tests__var_decl.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "uwu.ub",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: Name(
                                    "u64",
                                ),
                            },
                        ),
                        id: NodeId(
                            2,
                        ),
                        span: 0..80,
                        body: [
                            VarDecl(
                                VarDecl {
                                    name: "hello",
                                    ty: Some(
                                        Ty {
                                            span: 29..32,
                                            kind: Name(
                                                "u64",
                                            ),
                                        },
                                    ),
                                    rhs: Some(
                                        Expr {
                                            kind: Literal(
                                                Integer(
                                                    5,
                                                    35..36,
                                                ),
                                            ),
                                            id: NodeId(
                                                0,
                                            ),
                                            span: 35..36,
                                        },
                                    ),
                                    span: 0..0,
                                },
                            ),
                            VarDecl(
                                VarDecl {
                                    name: "owo",
                                    ty: None,
                                    rhs: Some(
                                        Expr {
                                            kind: Literal(
                                                Integer(
                                                    0,
                                                    48..49,
                                                ),
                                            ),
                                            id: NodeId(
                                                1,
                                            ),
                                            span: 48..49,
                                        },
                                    ),
                                    span: 0..0,
                                },
                            ),
                            VarDecl(
                                VarDecl {
                                    name: "nice",
                                    ty: Some(
                                        Ty {
                                            span: 61..64,
                                            kind: Name(
                                                "u64",
                                            ),
                                        },
                                    ),
                                    rhs: None,
                                    span: 0..0,
                                },
                            ),
                            VarDecl(
                                VarDecl {
                                    name: "nothing",
                                    ty: None,
                                    rhs: None,
                                    span: 0..0,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
