src/snapshots/ub__parser__tests__while_loop.snap
---
source: src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "ub__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: U64,
                            },
                        ),
                        id: NodeId(
                            1,
                        ),
                        span: 0..34,
                        body: [
                            WhileStmt(
                                WhileStmt {
                                    cond: Expr {
                                        kind: Name(
                                            "false",
                                        ),
                                        id: NodeId(
                                            0,
                                        ),
                                        span: 24..29,
                                    },
                                    body: [],
                                    span: 18..32,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
